--- a/SDL_PROJECT.vcxproj.filters
+++ b/SDL_PROJECT.vcxproj.filters
@@ -29,14 +29,14 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="SDLWindows.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="Game.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="SDLWindows.h">
+      <Filter>소스 파일</Filter>
     </ClInclude>
     <ClInclude Include="SocketServer.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>소스 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
